# Avkash

./: .gitignore  Readme.md  package.json
client/: .env  .env.sample  (+6 more)
server/: .env  .env.sample  DB_Collections.py  Makefile  config.py  const.py  main.py  pyproject.toml
server/connection/: conn.py
server/connection/scripts/: migration.py  schema.json
server/ml_model/: aadhaar_checker.py
server/model/: dashboard_model.py  department_model.py  document_model.py  feedback_model.py  holiday_model.py  leaverequest_model.py  noticeboard_model.py  org_info_model.py  payslip_model.py  referral_model.py  reimbursement_model.py  user_info_model.py
server/routes/dashboard/: dashboard.py
server/routes/department/: department.py
server/routes/document/: document.py
server/routes/feedback/: feedback.py
server/routes/holiday/: holiday.py
server/routes/leaverequest/: leaverequest.py
server/routes/noticeboard/: noticeboard.py
server/routes/notifications/: notifications.py
server/routes/org_info/: org_info.py
server/routes/payslip/: payslip.py
server/routes/referral/: referral.py
server/routes/reimbursement/: reimbursement.py
server/routes/settings/: settings.py
server/routes/timesheet/: timesheet.py
server/routes/user_info/: user_info.py
server/training_model/: train_model.py
server/utils/common/: common_helper.py
server/utils/dashboard/: darshboard_helper.py
server/utils/email/: email_helper.py  email_template.py
server/utils/exception/: error_handler.py
server/utils/holiday/: holiday_helper.py
server/websocket/: websocket.py
(+93 files in other folders)
